--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JobSearch.Works</title>
+    <title>My Awesome Website</title>
 
     <!-- Google Analytics Tag -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-DDPZE0QW4X"
+      src="https://www.googletagmanager.com/gtag/js?id=YOUR_GA_TRACKING_ID"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -17,33 +17,26 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-DDPZE0QW4X");
+      gtag("config", "YOUR_GA_TRACKING_ID");
     </script>
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="Job Search Works" />
+    <meta property="og:title" content="My Awesome Website" />
     <meta
       property="og:description"
-      content="Job Search Works - be the drop-off!"
+      content="A brief description of my awesome website."
     />
-    <meta
-      property="og:image"
-      content="https://honestresume.space/assets/default-thumbnail.jpg"
-    />
-    <meta property="og:url" content="https://jobsearch.works/" />
+    <meta property="og:image" content="/assets/default-thumbnail.jpg" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Job Search Works" />
+    <meta name="twitter:title" content="My Awesome Website" />
     <meta
       name="twitter:description"
-      content="Job Search Works - apply to jobs with AI!"
+      content="A brief description of my awesome website."
     />
-    <meta
-      name="twitter:image"
-      content="https://jobsearch.works/assets/default-thumbnail.jpg"
-    />
+    <meta name="twitter:image" content="/assets/default-thumbnail.jpg" />
   </head>
   <body>
     <div id="root"></div>
