--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Favicon -->
+    <!-- Provide your own favicon.ico in /public or remove this link -->
+    <!-- <link rel="icon" type="image/x-icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Awesome Website</title>
+    <title>Your App</title>
 
     <!-- Google Analytics Tag -->
     <script
@@ -21,20 +23,20 @@
     </script>
 
     <!-- Open Graph Metadata -->
-    <meta property="og:title" content="My Awesome Website" />
+    <meta property="og:title" content="Your App" />
     <meta
       property="og:description"
-      content="A brief description of my awesome website."
+      content="Quick-start React + Firebase template project."
     />
     <meta property="og:image" content="/assets/default-thumbnail.jpg" />
     <meta property="og:type" content="website" />
 
     <!-- Twitter Card Metadata -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="My Awesome Website" />
+    <meta name="twitter:title" content="Your App" />
     <meta
       name="twitter:description"
-      content="A brief description of my awesome website."
+      content="Quick-start React + Firebase template project."
     />
     <meta name="twitter:image" content="/assets/default-thumbnail.jpg" />
   </head>
